# FARR-Robot

./: .gitignore  LICENSE  README.md  README_cn.md
docs/: FARR_PROJECT_CONTEXT_SUMMARY.md  FARR_RDK_OPERATION_RUNBOOK.md  FARR_全链路启动与后续开发说明.md  RDK_X5_Codex_开发工作流.md
rdk_project/rviz/: farr_global_elevation_check.rviz
rdk_project/scripts/: farr_imu_stats.py  farr_min_slam_test.sh  farr_start_nav_stack.sh
rdk_project/src/FAST_LIO_ROS2/config/: mid360.yaml
rdk_project/src/FAST_LIO_ROS2/launch/: mapping.launch.py
rdk_project/src/farr_bringup/: package.xml  setup.cfg  setup.py
rdk_project/src/farr_bringup/config/: farr_nav2_params.yaml  farr_scan_from_mid360.yaml  mid360.yaml  rdk_pose_runtime.yaml
rdk_project/src/farr_bringup/farr_bringup/: imu_static_guard.py  odom_tf_broadcaster.py
rdk_project/src/farr_bringup/launch/: chassis.launch.py  competition.launch.py  farr_localization_amcl.launch.py  farr_nav2.launch.py  farr_nav2_amcl.launch.py  global_elevation_map.launch.py  mapping_2_5d.launch.py  sensors.launch.py  slam.launch.py  slice_cloud.launch.py  slice_cloud_cpp.launch.py  vision.launch.py  web_gateway.launch.py
rdk_project/src/farr_bringup/urdf/: farr_base_laser.urdf
rdk_project/src/farr_chassis_bridge/: package.dsv  package.xml  setup.cfg  setup.py
rdk_project/src/farr_chassis_bridge/farr_chassis_bridge/: cmd_vel_bridge_node.py  keyboard_control_node.py
rdk_project/src/farr_chassis_bridge/hook/: ament_prefix_path.sh
rdk_project/src/farr_mapping/: package.xml  setup.cfg  setup.py
rdk_project/src/farr_mapping/farr_mapping/: global_elevation_mapper.py  slice_cloud.py  slice_mapper.py
rdk_project/src/farr_mapping/launch/: global_elevation_map.launch.py  mapping_2_5d.launch.py  slice_cloud.launch.py
rdk_project/src/farr_pointcloud_tools/: CMakeLists.txt  package.xml
rdk_project/src/farr_pointcloud_tools/launch/: slice_cloud.launch.py
rdk_project/src/farr_pointcloud_tools/src/: slice_cloud_node.cpp
rdk_project/src/farr_vision_bpu/: package.xml  setup.cfg  setup.py
rdk_project/src/farr_vision_bpu/farr_vision_bpu/: hik_camera_publisher.py  person_pose_node_official.py  save_pose_result.py
rdk_project/src/farr_web_gateway/: package.xml  setup.cfg  setup.py
rdk_project/src/farr_web_gateway/farr_web_gateway/: gateway_node.py
rdk_project/src/livox_ros_driver2/: CMakeLists.txt
rdk_project/src/livox_ros_driver2/config/: MID360_config.json  MID360s_config.json
rviz_configs/: README.md  farr_mapping_check.rviz  farr_nav2_debug.rviz
stm32/RM_Engineer_26_V1.0/: CMakeLists.txt
stm32/RM_Engineer_26_V1.0/Src/: freertos.c
stm32/RM_Engineer_26_V1.0/Tasks/: chassis_control_task.c  chassis_control_task.h  rdk_comm_task.c  rdk_comm_task.h
stm32/RM_Engineer_26_V1.0/applications/: DM_Motor.c  DM_Motor.h
stm32/RM_Engineer_26_V1.0/boards/: bsp_can.c  bsp_can.h
stm32/RM_Engineer_26_V1.0/modules/: can_motor.c  can_motor.h
stm32/RM_Engineer_26_V1.0/protocol/: usart_protocol.c  usart_protocol.h
