<?xml version="1.0"?>
<package format="3">
  <name>farr_chassis_bridge</name>
  <version>0.1.0</version>
  <description>FARR chassis bridge between RDK X5 and STM32 over UART.</description>
  <maintainer email="farr@example.com">FARR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
