<?xml version=" 1.0\?>
<package format=\3\>
 <name>farr_mapping</name>
 <version>0.1.0</version>
 <description>Lightweight 2.5D mapping utilities for the Four-Arm Rescue Robot.</description>
 <maintainer email=\root@localhost\>FARR Team</maintainer>
 <license>MIT</license>

 <buildtool_depend>ament_python</buildtool_depend>
 <depend>rclpy</depend>
 <depend>sensor_msgs</depend>
 <depend>nav_msgs</depend>
 <depend>std_msgs</depend>
 <depend>std_srvs</depend>
 <depend>geometry_msgs</depend>

 <export>
 <build_type>ament_python</build_type>
 </export>
</package>
