<?xml version="1.0"?>
<package format="3">
  <name>farr_pointcloud_tools</name>
  <version>0.1.0</version>
  <description>Fast point cloud slicing tools for FARR.</description>
  <maintainer email="farr@example.com">FARR Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
