<?xml version="1.0"?>
<package format="3">
  <name>farr_vision_bpu</name>
  <version>0.1.0</version>
  <description>FARR Hikrobot camera publisher and RDK X5 BPU YOLO pose inference nodes.</description>
  <maintainer email="root@localhost">FARR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
