<?xml version="1.0"?>
<package format="3">
  <name>farr_web_gateway</name>
  <version>0.1.0</version>
  <description>FARR Web gateway for frontend HTTP/WebSocket protocol.</description>
  <maintainer email="farr@example.com">FARR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>python3-aiohttp</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
